--- a/package.json
+++ b/package.json
@@ -1,48 +1,39 @@
 {
-	"name": "@samouraiwallet/electrum-client",
-	"version": "1.4.0",
-	"engines": {
-		"node": ">=14.0.0"
-	},
-	"description": "Electrum protocol client for Node.js",
-	"keywords": [
-		"bitcoin",
-		"electrum",
-		"electrumx"
-	],
-	"type": "module",
-	"exports": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"scripts": {
-		"test": "vitest run",
-		"test:watch": "vitest watch",
-		"lint": "eslint --ext .ts src/",
-		"typescript": "tsc --noEmit",
-		"build:clean": "rm -rf dist",
-		"build:esm": "tsc -p tsconfig.build.json",
-		"build": "npm run build:clean && npm run build:esm",
-		"prepack": "npm run lint && npm run typescript && npm run test",
-		"prepare": "npm run build"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git://code.samourai.io/dojo/electrum-client.git"
-	},
-	"bugs": {
-		"url": "https://code.samourai.io/dojo/electrum-client/-/issues"
-	},
-	"author": "Katana Cryptographic Ltd.",
-	"license": "LGPL-3.0",
-	"homepage": "https://code.samourai.io/dojo/electrum-client",
-	"devDependencies": {
-		"@types/node": "^16.18.32",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
-		"@vitest/coverage-c8": "^0.31.1",
-		"eslint": "^8.41.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-unicorn": "^47.0.0",
-		"typescript": "^5.0.4",
-		"vitest": "^0.31.1"
-	}
+  "name": "@haruka/electrum",
+  "version": "1.4.0",
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "author": "Riku Block",
+  "license": "LGPL-3.0",
+  "description": "Electrum protocol client for Node.js",
+  "keywords": [
+    "bitcoin",
+    "electrum",
+    "electrumx"
+  ],
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "lint": "eslint --ext .ts src/",
+    "typescript": "tsc --noEmit",
+    "build:clean": "rm -rf dist",
+    "build:esm": "tsc -p tsconfig.build.json",
+    "build": "yarn run build:clean && yarn run build:esm",
+    "prepack": "yarn run lint && yarn run typescript && yarn run test",
+    "prepare": "yarn run build"
+  },
+  "devDependencies": {
+    "@types/node": "^16.18.32",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "@vitest/coverage-c8": "^0.31.1",
+    "eslint": "^8.41.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "typescript": "^5.0.4",
+    "vitest": "^0.31.1"
+  }
 }
